# CSE6242-DVA-Homework

./: README.md
.github/workflows/: staticQ4.yml  staticQ4fr.yml
HW1/Q1/: Q1.py  TMDB_api_test.py  edges.csv  graph_test.py  nodes.csv
HW1/Q2/: Q2  Q2-AVST-9006869  Q2-Macbook Air de Ruwei  Q2.py  sample
HW1/Q3/: Q3.html
HW1/Q4/: Q4Observations.txt  changes.json
HW1/Q5/wrangling_scripts/: Q5.py
HW2/Q1/: Book1.twb
HW2/Q2/: Q2.css  Q2.html  Q2.js
HW2/Q3/: Q3.html  Q3.js
HW2/Q4/: Q4.html  Q4.js
HW2/Q5/: Q5.html
HW3/: hw3_instr.pdf:Zone.Identifier
HW3/Q2/: q2.dbc  q2.scala  q2_results.csv
HW3/Q3/: q3.ipynb  q3_output_large.csv
HW3/Q4/: q4.ipynb  q4.ipynb:Zone.Identifier
HW3/Q5/: q5.csv
HW3/hw3q2-data/hw3q2-data/: taxi_zone_lookup.csv:Zone.Identifier
HW4/: pyproject.toml
HW4/Q1/: Q1.ipynb  personalized_pagerank_iter10.txt  personalized_pagerank_iter25.txt  simplified_pagerank_iter10.txt
HW4/Q2/: Q2.ipynb
HW4/Q3/: Pipfile  Q3.ipynb  requirements.txt
docs/: Q4.css  Q4.js  index.html
