[tool.poetry]
name = "hw4"
version = "0.1.0"
description = ""
authors = ["Ruwei"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.x"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
notebook = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
